<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:orientation="horizontal"
    android:paddingRight="5dp"
    android:paddingLeft="5dp">

    <ImageView
        android:id="@+id/imgPet"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginRight="5dp"
        android:background="@drawable/image_background"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:background="@drawable/lista_background"
        android:padding="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/nome"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/txtNomePet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="Bola de neve"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/tipo"
                android:textSize="17sp"
                android:layout_marginEnd="5dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/txtTipo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="Cachorro"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/raca"
                android:textSize="17sp"
                android:layout_marginEnd="5dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/txtRaca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="Maltes"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/faixa"
                android:textSize="17sp"
                android:layout_marginEnd="5dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/txtFaixaEtaria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="2 a 5 anos"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/sexo"
                android:textSize="17sp"
                android:layout_marginEnd="5dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/txtSexo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="Macho"
                android:textColor="@color/black"/>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/listainteressados"
            android:textSize="12dp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:background="@drawable/button_background"
            android:layout_marginTop="5dp"/>

    </LinearLayout>
</LinearLayout>